--- a/templates/share.html
+++ b/templates/share.html
@@ -69,6 +69,7 @@
         <a href="javascript:LE.aria2_links();"><div class="task-button">aria2x10</div></a>
         <a href="/export/{{ url_escape(options.site_name) }}_idm_{{ task.id }}_{{ url_escape(task.taskname.replace(" ", "_")) }}.ef2"><div class="task-button">IDM 导出</div></a>
         <a href="/export/{{ url_escape(options.site_name) }}_aria2c_{{ task.id }}_{{ url_escape(task.taskname.replace(" ", "_")) }}.down"><div class="task-button">aria2导出</div></a>
+        <a href="javascript:LE.lixian_links();"><div class="task-button">离线导出</div></a>
       </div>
     </div>
     {% else %}
@@ -95,6 +96,7 @@
     <div class="tname"><span class="p1">{{ len(file.title) > 15 and file.title[:-15] or file.title }}</span><span class="p2">{{ len(file.title) > 15 and file.title[-15:] or "" }}</span></div>
     {% end %}
     <div class="info"><span class="file-size">{{ format_size(file.size) }}</span></div>
+    <div class="add2lixian task-button" style="display:none;"><a href="#" onclick="window.open(this.href); return false;"> 添加到我的离线 </a></div>
     <div class="clearfix"></div>
   </li>
   {% end %}
@@ -147,6 +149,25 @@
   }, function() {
     $("#share-links").hide();
   });
+
+  $(".file-item").hover(function() {
+    function url_fix(url, filename) {
+      console.log(url, filename);
+      var tid = url.match(/&tid=([^&]+)/)[1];
+      var fid = url.match(/fid=([^&]+)/)[1];
+      if (fid && tid)
+        return "http://sendfile.vip.xunlei.com/"+filename+"?fid="+fid+"&mid=666&threshold=150&tid="+tid;
+      return "";
+    }
+    var _this = $(this);
+    var t = _this.find("a.file-title");
+    if (t) {
+      _this.find(".add2lixian a").attr("href", "http://lixian.vip.xunlei.com/lixian_login.html?furl="+encodeURIComponent(url_fix(t.attr("href"), t.text())));
+      _this.find(".add2lixian").show()
+    }
+  }, function() {
+      $(this).find(".add2lixian").hide()
+  })
 
   if (localStorage && LE.custom_script) {
     var custom = '<a id="custom-button" href="javascript:LE.custom();"><div class="task-button">'+LE.custom_script.name+'</div></a>';
