--- a/templates/lixian.html
+++ b/templates/lixian.html
@@ -7,6 +7,7 @@
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script> !window.jQuery && document.write('<script type="text/javascript" src=\"{{static_url("js/jquery-1.4.3.min.js")}}\"><\/script>'); </script>
 <script type="text/javascript" src="{{static_url('js/fancybox/jquery.fancybox-1.3.4.pack.js')}}"></script>
+<script src="http://pstatic.xunlei.com/js/base64.js"></script>
 <script type="text/javascript" src="{{static_url('js/common.js')}}"></script>
 <script type="text/javascript">
   LE.taskname = {% raw json_encode(task.taskname) %};
@@ -60,9 +61,9 @@
       <div id="batch-links" class="more-links" style="display: none;">
         <a href="javascript:LE.wget_links();"><div class="task-button">wget</div></a>
         <a href="javascript:LE.aria2_links();"><div class="task-button">aria2x10</div></a>
+        <a href="javascript:LE.lixian_links();"><div class="task-button">迅雷导出</div></a>
         <a href="/export/{{ url_escape(options.site_name) }}_idm_{{ task.id }}.ef2"><div class="task-button">IDM 导出</div></a>
         <a href="/export/{{ url_escape(options.site_name) }}_aria2c_{{ task.id }}.down"><div class="task-button">aria2导出</div></a>
-        <a href="javascript:LE.lixian_links();"><div class="task-button">离线导出</div></a>
       </div>
     </div>
     {% else %}
@@ -84,7 +85,7 @@
       <div class="file-title">{{ file.title }}</div>
       {% end %}
       <div class="file-size">{{ format_size(file.size) }}</div>
-      <div class="file-2lixian task-button" style="display:none;"><a onclick="window.open(this.href); return false;"> 添加到我的离线 </a></div>
+      <div class="file-2lixian task-button" style="display:none;"><a>使用迅雷下载</a></div>
       <div class="clearfix"></div>
     </li>
     {% end %}
@@ -124,18 +125,11 @@
   });
 
   $(".file-item").hover(function() {
-    function url_fix(url, filename) {
-      var tid = url.match(/&tid=([^&]+)/)[1];
-      var fid = url.match(/fid=([^&]+)/)[1];
-      if (fid && tid)
-        return "http://sendfile.vip.xunlei.com/"+filename+"?fid="+fid+"&mid=666&threshold=150&tid="+tid;
-      return "";
-    }
     var _this = $(this);
     var t = _this.find("a.file-title");
     if (t) {
       if (!_this.find(".file-2lixian a").attr("href"))
-        _this.find(".file-2lixian a").attr("href", "http://lixian.vip.xunlei.com/lixian_login.html?furl="+encodeURIComponent(url_fix(t.attr("href"), t.text())));
+        _this.find(".file-2lixian a").attr("href", thunder_url_fix(t.attr("href"), t.text()));
       _this.find(".file-2lixian").show()
     }
   }, function() {
