--- a/templates/front.html
+++ b/templates/front.html
@@ -30,7 +30,7 @@
       <li><a href="/add_task" class="iframe add-task">发布资源</a></li>
       <li class="last"><a href="/add_task_anonymous" class="iframe add-task-anonymous">获取离线地址</a></li>
       {% else %}
-      <li class="last"><a href="/login">Google OpenID 登录</a></li>
+      <li class="last"><a href="/login">Google OpenID 登录/注册</a></li>
       {% end %}
     </ul>
     </div>
