--- a/templates/lixian.html
+++ b/templates/lixian.html
@@ -33,6 +33,18 @@
   };
   LS.share_url = {% raw json_encode(request.protocol+"://"+request.host+"/share/"+str(task.id)) %};
   LS.share_title = {% raw json_encode(task.taskname+u" - 迅雷离线下载分享 - "+options.site_name) %};
+
+
+
+$(document).ready(function(){
+    var select=$("input.select");
+    $("#toggle").click(function(){
+        select.show();
+      var checked=this.checked;
+      select.each(function(i,n){n.checked=checked});
+  });
+});
+
 </script>
 <link rel="stylesheet" href="{{static_url('js/fancybox/jquery.fancybox-1.3.4.css')}}" type="text/css" media="screen" />
 <link rel="canonical" href="{{ request.protocol }}://{{ request.host }}/share/{{ task.id }}" />
@@ -45,7 +57,11 @@
 {% end %}
 
   <div class="task-info">
-    <div class="task-name">{{ task.taskname }}</div>
+      
+      <div class="task-name">
+          <input type="checkbox" id="toggle"/>
+          {{ task.taskname }}
+      </div>
     {% if task.status == "finished" %}
     <div id="share-button" class="task-button">
       <a href="/share/{{ task.id }}" target="_blank"><div>分享</div></a>
@@ -80,7 +96,7 @@
     {% for file in files %}
     <li class="file-item">
       <div class="process-bar {{ file.status }}" style="width: {{ 100-file.process }}%"></div>
-      <input type="checkbox" class="select"/>
+      <input type="checkbox" class="select"  checked="true" style="display:none;"/>
       {% if file.lixian_url %}
       <a class="file-title" href="{{ file.lixian_url }}" target="_blank">{{ file.title }}</a>
       {% else %}
