--- a/static/css/base.css
+++ b/static/css/base.css
@@ -288,3 +288,20 @@ a.cross-cookie { color: #c00 !important; text-decoration: none !important; paddi
 
     .lixian-box #link-text { width: 100%; border: none; }
 /* }}} lixian_box */
+
+
+input[type='checkbox'] {
+	display:none;
+}
+
+input[type='checkbox'] + label{
+	margin: 0;
+	clear: none;
+	padding: 5px 0 4px 24px;
+	background: url(/static/js/fancybox/off.png) left center no-repeat;	
+}
+
+input[type='checkbox']:checked + label{
+	background-image: url(/static/js/fancybox/check.png);
+}
+
