--- a/templates/manager.html
+++ b/templates/manager.html
@@ -40,12 +40,12 @@ hr { margin-top: 10px; margin-bottom: 20px; }
 <hr />
 <section id="options">
   <ul>
-      <li><a href="/manager/flush_mem_cache">刷新缓存</a></li>
-      <li>重新抓取 <a href="/manager/refetch_finished_tasks">所有</a> / <a href="/manager/refetch_downloading_tasks">下载中</a> 的任务</li>
+      <li><form action="/manager/flush_mem_cache" method="POST"><button type="submit">刷新缓存</button></form></li>
+      <li>重新抓取 <form action="/manager/refetch_finished_tasks" method="POST"><button type="submit">所有</button></form> / <form action="/manager/refetch_downloading_tasks" method><button>下载中</button></form> 的任务</li>
       <li>
         <dl>
           <dt>
-            <form action="/manager/set_tid">设置task_id: 
+            <form action="/manager/set_tid" method="POST">设置task_id: 
               <input name="tid" type="text" value="{{ handler.task_manager.last_task_id }}" />
               <input type="submit" value="submit" />
             </form>
@@ -60,7 +60,7 @@ hr { margin-top: 10px; margin-bottom: 20px; }
           </dd>
       </li>
       <li>
-        <form action="/manager/set_vip_pool">设置VIPool: <br />
+        <form action="/manager/set_vip_pool" method="POST">设置VIPool: <br />
             <textarea name="pool" style="width: 500px;">{{ handler.vip_pool.serialize() }}</textarea> <br />
           <input type="submit" value="submit" />
         </form>
@@ -71,13 +71,13 @@ hr { margin-top: 10px; margin-bottom: 20px; }
         </form>
       </li>
       <li>
-        <form action="/manager/block_user">Block: 
+        <form action="/manager/block_user" method="POST">Block: 
           <input name="user_id" type="text" /><input type="submit" value="submit" />
         </form>
       </li>
       <li><a href="/manager/get_add_task_limit">查看添加任务计数</a></li>
       <li><a href="/manager/get_reload_limit">查看reload计数</a></li>
-      <li><a href="/manager/reset_limit">重置任务计数器计数</a></li>
+      <li><form action="/manager/reset_limit" method="POST"><button type="submit">重置任务计数器计数</button></form></li>
   </ul>
 </section>
 {% end %}
