--- a/templates/lixian.html
+++ b/templates/lixian.html
@@ -62,6 +62,7 @@
     <div id="share-button" class="task-button">
       <a href="/share/{{ task.id }}" target="_blank"><div>分享</div></a>
       <div id="share-links" class="more-links" style="display: none;">
+        <a href="javascript:LS.share_copy();" title="复制分享地址"><div class="task-button">复制地址</div></a>
         <a href="javascript:LS.share_google();" title="分享到 Google+"><div class="task-button">Google+</div></a>
         <a href="javascript:LS.share_twitter();" title="分享到 Twitter+"><div class="task-button">Twitter</div></a>
         <a href="javascript:LS.share_sina();" title="分享到 新浪微博"><div class="task-button">新浪微博</div></a>
